@@ -6,6 +6,7 @@ v3.4.6 to
   - New sprites for Action 5 type 07.
 - Fix U+E0xx characters being output quoted.
 - Allow the beautifier to output escape sequences.
+- Support random 2 type 84.
 
 v3.4.5 to v3.4.6 (r1795)
 - Data file updates:
